change log location

--- a/io.github.julian_hochhaus.LG4X_V2.yaml
+++ b/io.github.julian_hochhaus.LG4X_V2.yaml
@@ -10,7 +10,7 @@ finish-args:
   - --socket=wayland
   - --socket=fallback-x11
   - --device=dri
-  - --filesystem=home #For log file
+  - --filesystem=xdg-cache
 cleanup:
   - /include
   - /share/man
