--- a/io.github.julian_hochhaus.LG4X_V2.yaml
+++ b/io.github.julian_hochhaus.LG4X_V2.yaml
@@ -121,7 +121,7 @@ modules:
           tag-pattern: ^([\d.]+)$
       - type: patch
         path: metainfo_release_date.patch
-      # - type: patch
-      #   path: flatpak_log.patch
+      - type: patch
+        path: flatpak_config.patch
 
 
